# Hausdorff_GPU_317

./: CMakeLists.txt  STAGE3_IMPLEMENTATION_REPORT.md  TIMING_ANALYSIS_REPORT.md  run_gpu_comparison.sh  run_serial.sh
logs_gpu_comparison/: summary.csv
src/app/: CMakeLists.txt  cuda_wrapper.cu  main.cpp  test_parallel_traverse.cu
src/bvh/: CMakeLists.txt  lbvh.cu  lbvh.cuh  lbvh_iface.hpp
src/hausdorff/: CMakeLists.txt  gpu_batch_query.cu  gpu_parallel_traverse.cu  gpu_parallel_traverse.cuh  gpu_parallel_traverse_iface.hpp  hausdorff.cpp  hausdorff.h
